--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
+    "react-responsive-modal": "^6.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
